--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ local.properties
 *.jar
 *.war
 *.ear
+*.jar.original
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
@@ -65,5 +66,8 @@ local.properties
 .idea_modules/
 
 #maven target
-.lst
+*.lst
 
+.DS_Store
+
+*/target/classes/
