--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+        </dependency>
+        <dependency>
             <groupId>ns.dp.cebaa</groupId>
             <artifactId>domain</artifactId>
             <version>1.0-SNAPSHOT</version>
