--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.profiles.active=dev
+
+spring.datasource.url=jdbc:h2:~/dev/project/cebaa/h2db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.debug=true
+spring.jpa.show-sql=true
+
+spring.h2.console.enabled=true
