--- a/UISwing/pom.xml
+++ b/UISwing/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>ns.dp.cebaa</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ns.dp.cebaa</groupId>
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
